# sharing-sbom-system

./: .env.example  .gitignore  README.md
argocd/: application.yaml
benchmark/: benchmark.py  pyproject.toml
catalog/: blockchain-node.yaml  ipfs-service.yaml  proving-service.yaml  systems.yaml  verifier-service.yaml
contracts/: SBOMRegistry.sol  SBOMRegistryV2.sol
docs/: BACKSTAGE.md
dummyapp/: Dockerfile  README.md  app.py  requirements.txt
dummyapp2/: Dockerfile  README.md  app.js
ipfs-service/: Dockerfile  README.md  app.py  config.py  ipfs_client.py  models.py  requirements.txt  routes.py  utils.py
merkle-proof-service/: .dockerignore  .gitignore  Dockerfile  Makefile  config.go  docker-compose.yml  go.mod  main.go
proof-orchestrator-service/: Dockerfile  config.py  main.py  requirements.txt
proving-service/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.benchmark  Dockerfile.cuda  Makefile  README.md  benchmark-notes.md  benchmark.sh  compact-smt-large-request-example.json  compact-smt-request-example.json  docker-compose.cpu.yml  docker-compose.yml  medium-smt-request.json  small-smt-request.json
proving-service/benchmark/: benchmark.py  plot_results.py  pyproject.toml
proving-service/benchmark/data/base_documents/: bench_banned_list.txt
proving-service/benchmark/data/merkleproofs/: batch_proof_10.json  batch_proof_100.json  batch_proof_2.json  batch_proof_20.json  batch_proof_200.json  batch_proof_5.json  batch_proof_50.json
proving-service/benchmark/data/proofs_20260121_170853/: benchmark_summary.json  proof_10_run10_1769018496.json  proof_10_run1_1769015350.json  proof_10_run2_1769015699.json  proof_10_run3_1769016049.json  proof_10_run4_1769016400.json  proof_10_run5_1769016751.json  proof_10_run6_1769017100.json  proof_10_run7_1769017448.json  proof_10_run8_1769017799.json  proof_10_run9_1769018148.json  proof_20_run10_1769018515.json  proof_20_run1_1769015369.json  proof_20_run2_1769015718.json  proof_20_run3_1769016068.json  proof_20_run4_1769016418.json  proof_20_run5_1769016769.json  proof_20_run6_1769017119.json  proof_20_run7_1769017467.json  proof_20_run8_1769017818.json  proof_20_run9_1769018167.json  proof_2_run10_1769018482.json  proof_2_run1_1769015336.json  proof_2_run2_1769015685.json  proof_2_run3_1769016035.json  proof_2_run4_1769016385.json  proof_2_run5_1769016736.json  proof_2_run6_1769017086.json  proof_2_run7_1769017434.json  proof_2_run8_1769017785.json  proof_2_run9_1769018134.json  proof_5_run10_1769018487.json  proof_5_run1_1769015340.json  proof_5_run2_1769015689.json  proof_5_run3_1769016039.json  proof_5_run4_1769016390.json  proof_5_run5_1769016741.json  proof_5_run6_1769017091.json  proof_5_run7_1769017439.json  proof_5_run8_1769017789.json  (+1 more)
proving-service/common/: Cargo.toml
proving-service/common/src/: lib.rs  test
proving-service/methods/: Cargo.toml
proving-service/methods/guest/: Cargo.toml
proving-service/methods/guest/src/: main.rs
proving-service/methods/src/: lib.rs
proving-service/src/: config.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  utils.rs
sbom/: Dockerfile  app-config.yaml  catalog-info.yaml
scripts/: compute-banned-list-hash.py  generate-and-retrieve-proof.sh  setup.sh  (+7 more)
verifier-service/: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
verifier-service/methods/: Cargo.toml
verifier-service/methods/guest/: Cargo.toml
verifier-service/methods/guest/src/: main.rs
verifier-service/src/: config.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  utils.rs
(+72 files in other folders)
