[package]
name = "proving-service"
version = "0.3.0"
edition = "2024"

[lib]
name = "proving_service"
path = "src/lib.rs"

[[bin]]
name = "proving-service"
path = "src/main.rs"

[dependencies]
actix-web = "4.4"
actix-rt = "2.9"
methods = { path = "./methods" }
sbom-common = { path = "./common" }
risc0-zkvm = { version = "3.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.19"

[features]
cuda = ["risc0-zkvm/cuda"]

# Use RISC Zero's patched sha2 crate with precompile support
[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
