[package]
name = "verifier-service"
version = "0.1.0"
edition = "2021"

[lib]
name = "verifier_service"
path = "src/lib.rs"

[[bin]]
name = "verifier-service"
path = "src/main.rs"

[dependencies]
actix-web = { version = "4.4", features = ["macros"] }
actix-rt = "2.9"
risc0-zkvm = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
