[package]
name = "sbom_validator"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "^3.0.3", default-features = false, features = ['std'] }
sbom-common = { path = "../../common", default-features = false, features = ['std'] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
