[package]
name = "sbom_validator"
version = "0.3.0"
edition = "2024"

[workspace]

[dependencies]
risc0-zkvm = { version = "^3.0.3", default-features = false, features = ['std'] }
sbom-common = { path = "../../common", default-features = false, features = ['std'] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "=0.10.8"

# Use RISC Zero's patched sha2 crate with precompile support
[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
